--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Snake Game</title>
+<title>Aryabhata</title>
 <link rel="stylesheet" href="style.css">
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 </head>
@@ -15,6 +15,7 @@
 </div>
 
 <div id="menu">
+	<h1> Aryabhata Site - Under Construction - Till then enjoy this Game </h1>
 	<h1 id="snake">Snake</h1>
 	<a href="#" id="start" onclick="init()" >Start</a>
 	<p id="loading">Loading...</p>
