--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 	<h1 id="snake">Snake</h1>
 	<a href="#" id="start" onclick="init()" >Start</a>
 	<p id="loading">Loading...</p>
-	<h3> Aryabhata Site - Under Construction - Till then enjoy this Game </h3>
 </div>
 
 <p id="score">Score: 0</p>
@@ -276,5 +275,7 @@ function startMenu() {
 startMenu();
 </script>
 
-
+<footer>
+	<h3> Aryabhata Site - Under Construction - Till then enjoy this Game </h3>
+</footer>
 </html>
