--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 	<p id="loading">Loading...</p>
 </div>
 
-<p id="score">Score: 0</p>
+<p id="score">Score: 0</p> 
+<p align="center">Aryabhata Site - Under Construction - Till then enjoy this Game </p>
 
 <!-- Audio -->
 <audio id="main_music" loop>
@@ -275,7 +276,4 @@ function startMenu() {
 startMenu();
 </script>
 
-<footer>
-	<h3> Aryabhata Site - Under Construction - Till then enjoy this Game </h3>
-</footer>
 </html>
