--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
 	<br/>
 	<br/>
 	<br/>
+	<div>
 	<!-- Start HTML Code -->
-	<iframe title="Shoutbox" src="http://shoutbox.widget.me/window.html?uid=1fu2go" frameborder="0" scrolling="auto">
+	<iframe title="Shoutbox" src="http://shoutbox.widget.me/window.html?uid=1fu2go" allowfullscreen="" frameborder="0" scrolling="auto">
 	</iframe>
 	<script src="http://shoutbox.widget.me/v1.js" type="text/javascript">
 	</script>
 	<!-- End HTML Code -->
+	</div>
 	<br/>
 	<br/>
 	<br/>
