--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<br/>
 	<div>
 	<!-- Start HTML Code -->
-	<iframe title="Shoutbox" src="http://shoutbox.widget.me/window.html?uid=1fu2go" allowfullscreen="" frameborder="0" scrolling="auto">
+	<iframe title="Shoutbox" src="http://shoutbox.widget.me/window.html?uid=1fu2go" height="315" width="560" allowfullscreen="" frameborder="0" scrolling="auto">
 	</iframe>
 	<script src="http://shoutbox.widget.me/v1.js" type="text/javascript">
 	</script>
