--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 	<br/>
 	<br/>
 	<br/>
+	<p>
+	Use the numerals 1, 9, 9 and 6 exactly in that order to make the following numbers: 28, 32, 35, 38, 72, 73, 76, 77, 100 and 1000
+	You can use the mathematical symbols +, -, ×, /, √, ^ (exponent symbol) and brackets.
+
+	Example: 63 = 1×9+9×6
+	</p>
 	<!-- Start HTML Code -->
 	<iframe WIDTH="560" HEIGHT="400" title="Shoutbox" src="http://shoutbox.widget.me/window.html?uid=1fu2go" allowfullscreen="" frameborder="0" scrolling="auto">
 	</iframe>
