--- a/index.html
+++ b/index.html
@@ -4,29 +4,12 @@
   <link rel="stylesheet" type="text/css" href="style.css" />
   <script type="text/javascript" src="js/aryabhata.js"></script>
 
-  <title>Aryabhata #Devart</title>
-  <meta name="title" content="Aryabhata #Devart" />
+  <title>Aryabhata Inc.</title>
+  <meta name="title" content="Aryabhata Inc."/>
   <meta name="viewport" content="width=device-width,height=device-height">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 <body>
-	<br/>
-	<br/>
-	<br/>
-	<p>
-	Use the numerals 1, 9, 9 and 6 exactly in that order to make the following numbers: 28, 32, 35, 38, 72, 73, 76, 77, 100 and 1000
-	<br/>
-	You can use the mathematical symbols +, -, ×, /, √, ^ (exponent symbol) and brackets.
-	<br/>
-	Example: 63 = 1×9+9×6
-	<br/>
-	</p>
-	<!-- Start HTML Code -->
-	<iframe WIDTH="560" HEIGHT="400" title="Shoutbox" src="http://shoutbox.widget.me/window.html?uid=1fu2go" allowfullscreen="" frameborder="0" scrolling="auto">
-	</iframe>
-	<script src="http://shoutbox.widget.me/v1.js" type="text/javascript">
-	</script>
-	<!-- End HTML Code -->
 	<br/>
 	<br/>
 	<br/>
