--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 <body>
+	<header id="header">
+	<!-- Logo -->
+		<h1 id="logo"><a href="#">Aryabhata Inc.</a></h1>
+				
+		<!-- Nav -->
+		<nav id="nav">
+			<ul>
+			<li><a href="http://electionbook.org/">Election Book</a></li>
+			</ul>
+		</nav>
+	</header>
+	<a http://electionbook.org/>
 	<br/>
 	<br/>
 	<br/>
