--- a/index.html
+++ b/index.html
@@ -1,47 +1,54 @@
-<!doctype html>
-<head>
+<!DOCTYPE HTML>
+<!--
+	Aerial 1.0 by HTML5 UP
+	html5up.net | @n33co
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Aryabhata Inc.</title>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta name="description" content="" />
+		<meta name="keywords" content="" />
+		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+		<script src="js/skel.min.js"></script>
+		<script src="js/init.js"></script>
+		<noscript>
+			<link rel="stylesheet" href="css/skel.css" />
+			<link rel="stylesheet" href="css/style.css" />
+			<link rel="stylesheet" href="css/style-wide.css" />
+			<link rel="stylesheet" href="css/style-noscript.css" />
+		</noscript>
+		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
+		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+	</head>
+	<body class="loading">
+		<div id="wrapper">
+			<div id="bg"></div>
+			<div id="overlay"></div>
+			<div id="main">
 
-  <link rel="stylesheet" type="text/css" href="style.css" />
-  <script type="text/javascript" src="js/aryabhata.js"></script>
+				<!-- Header -->
+					<header id="header">
+						<h1>Aryabhata Inc.</h1>
+						<p>Innovation &nbsp;&bull;&nbsp; Recreate &nbsp;&bull;&nbsp; Rejuvenate</p>
+						<nav>
+							<ul>
+								<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
+								<li><a href="#" class="fa fa-facebook"><span>Facebook</span></a></li>
+								<li><a href="#" class="fa fa-dribbble"><span>Dribbble</span></a></li>
+								<li><a href="#" class="fa fa-github"><span>Github</span></a></li>
+								<li><a href="#" class="fa fa-envelope-o"><span>Email</span></a></li>
+							</ul>
+						</nav>
+					</header>
 
-  <title>Aryabhata Inc.</title>
-  <meta name="title" content="Aryabhata Inc."/>
-  <meta name="viewport" content="width=device-width,height=device-height">
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-</head>
-<body>
-	<header id="header">
-	<!-- Logo -->
-		<h1 id="logo"><a href="#">Aryabhata Inc.</a></h1>
-				
-		<!-- Nav -->
-		<nav id="nav">
-			<ul>
-			<li><a href="http://electionbook.org/">Election Book</a></li>
-			</ul>
-		</nav>
-	</header>
-	<a http://electionbook.org/>
-	<br/>
-	<br/>
-	<br/>
-	<div id="mast">
-      <div class="canvas-container">
-      </div>
-    </div>
- 
-   </div>
-    <a href="http://aryabhatas.github.io" id="ce-logo">
-      Aryabhata
-      <span>Innovate Recreate Rejuvenate</span>
-    </a>
-	
- <footer>	
-	<p align="center">
-	  Our Art for Devart<br/>
-      <small>An attempt to share our work on Devart.</small><br/>
-	  <small> Inspired by http://workshop.chromeexperiments.com </small>
-	</p>
-</footer>
-</body>
+				<!-- Footer -->
+					<footer id="footer">
+						<span class="copyright">&copy; Aryabhata Inc. Design:<a href="http://html5up.net">HTML5 UP</a>.</span>
+					</footer>
+					
+			</div>
+		</div>
+	</body>
 </html>
