--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Aryabhata Inc.</h1>
-						<p>Innovation &nbsp;&bull;&nbsp; Recreate &nbsp;&bull;&nbsp; Rejuvenate</p>
+						<p>Innovate &nbsp;&bull;&nbsp; Recreate &nbsp;&bull;&nbsp; Rejuvenate</p>
 						<nav>
 							<ul>
 								<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
