--- a/talentregistry/index.html
+++ b/talentregistry/index.html
@@ -51,7 +51,7 @@
 <link rel="stylesheet" type="text/css" href="https://static.licdn.com/scds/concat/common/css?h=83892l068mw9yvt4t3qj386b0-15q5qr6pokgoedmeswv4gch9z">
 <script type="text/javascript" src="https://static.licdn.com/scds/concat/common/js?h=ditm8xdycl29ta8gqk5tpmxf8-czstax4e6y68hymdvqxpwe5so"></script>
 <script type="text/javascript">fs._server.fire("bb40fe1567ff801310da1a78332b0000-1",{event:"after",type:"html"});</script>
-<title>Birla Institute of Technology and Science | LinkedIn</title>
+<title>Talent Registry | LinkedIn</title>
 <link rel="stylesheet" type="text/css" href="https://static.licdn.com/scds/concat/common/css?h=dng1gl9s6y06wf368zmi74gzi-dh1tv6ahv1zo5r3pa2rwa08pl-9isvvzw61fpveso9doy1mzsas-aze4ooami6s3kk293iv0zfky1">
 <script type="text/javascript" src="https://static.licdn.com/scds/concat/common/js?h=6b5tomv24hymqjdn9yh9vdxyg-95d8d303rtd0n9wj4dcjbnh2c-b0i2ltvivggf15dlzc359ook3"></script>
 <link rel="stylesheet" type="text/css" href="https://static.licdn.com/scds/concat/common/css?h=eqjh8uz759e90lq49rvcynzem-cekr12mjwoo05jcy9ud5k4wj4-2crds0mpfcdql64ct2kyv9npb-1qropirar95tlkfqbsa60th2t-63k24l8i83ytn0tvsukpkeadx-e6tbghs8vq5v0cuh5b5f1756x-btmokr84bs42g7q200k9abaxz-2pdzgyvzg44agnq0awtbjh3y0-9qu65gtx51r1bd0t64xjttuv6-8cdaezhya7jetqkmqqmoo394r-2rlc1s003a4fquja161uri07u-c7vouxauwcgh3lex0b9kzihwr-c9nahvgiafmcpxv91jgvanh79-a4bji1crqv5sznlylc10rrph4-brzloop03umgjflixw4s4urf9-ecqy8gsvby8ulic6t06p5d2gp-cbfyz9jifspow47uwbw4j93yi-fbj4rofrq71c8gsst8yblkjd-8wj0ymabqgfwi06uxbaqc96l6-dyj60cn61hcsc2pcjnfgdj1c6-dcak9va6rq9n5pp5i8d0gr4ag-2uglch3vwxupe32hfri537rzv">
